--- a/plot-weave/client/src/Main.css
+++ b/plot-weave/client/src/Main.css
@@ -1,3 +1,8 @@
+html, body {
+  height: 100%;
+  position: relative;
+}
+
 /* LOADER */
 
 .loader {
@@ -155,28 +160,33 @@ a:hover {
 
 /* FOOTER */
 
-.foot-elements {
-  position: absolute;
-  height: 60px;
+/* CSS */
+footer {
+  display: block;
+  text-align: center;
+  font-size: 0.75em;
+  bottom:0;
   width: 100%;
-  padding: 1rem;
-  list-style: none;
+  height: 30px;
+}
+
+.foot-elements {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  bottom: 0;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 
 .foot-elements li {
-  margin-left: 1em;
+  list-style: none;
+  margin: 0 1em;
 }
-
 
 /* HOME */
 
 @media screen and (max-width:768px) {
   .hero {
-    padding-top: 25% !important;
+    padding-top: 15% !important;
     display: inherit !important;
   }
   .intro {
@@ -189,11 +199,15 @@ a:hover {
   .demo {
     width: 100% !important;
   }
+  .start {
+    z-index: 1;
+    position: relative;
+  }
   .weave {
     display: block !important;
-    height: 20em !important;
+    height: 25em !important;
     margin: auto !important;
-    padding-top: 7em !important;
+    padding-top: 5em !important;
   }
   .section-2 {
     padding-bottom: 5em;
@@ -256,6 +270,7 @@ a:hover {
 }
 
 .start {
+    cursor: pointer;
     font-family: 'PT Sans', sans-serif;
     background-color: rgba(7,233,133,255);
     color: white;
@@ -345,7 +360,7 @@ a:hover {
 .section-3 {
   font-family: 'PT Sans', sans-serif;
   font-weight: bold;
-  margin-bottom: 10em;
+  margin-bottom: 5em;
 }
 
 .section-3 h1 {
@@ -373,6 +388,13 @@ a:hover {
 }
 
 /* ABOUT */
+
+@media screen and (max-width:768px) {
+  .about-pg {
+    width: 90% !important;
+    margin-top: 3em !important;
+  }
+}
 
 .about-pg {
   text-align: left;
@@ -657,31 +679,37 @@ a:hover {
 
 /* LOGIN */
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:900px) {
   .login-cont {
     width: 80% !important;
+  }
+  .cool-bg {
+    background: none !important;
   }
 }
 
 .cool-bg {
-  background: url('./images/coolbg.png');
-  height: 100vh;
+  background: url("./images/coolbg.png");
+  height: 60vh;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .login-cont {
   margin: auto;
   height: 30rem;
-  width: 50%;
+  width: 40%;
   padding: 3em 1em;
-  transform: translateY(5em);
+  transform: translateY(1.75em);
   border-radius: 1rem;
-  backdrop-filter: blur(5px);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.048);
 }
 
 .login-cont h2 {  
   font-family: 'PT Sans', sans-serif;
   font-weight: bold;
+  font-size: 48px;
+  color: #59b85c;
+  text-shadow: -2px 0px 0.5px #49974c, -3px 0.5px 0.8px #3b7c3d;
 }
 
 .enter-cred {
@@ -690,23 +718,69 @@ a:hover {
 
 .cred-input {
   padding: 0.5rem;
-  width: 70%;
-  background: transparent;
+  margin: auto;
+  width: 80%;
+  background: white;
   height: 3rem;
   border: none;
   outline: 0px transparent;
   border-bottom: 0.5px solid grey;
 }
 
-.long-btn {
-  border: none;
-  background: transparent;
-  font-family: 'PT Sans', sans-serif;
-  font-weight: bold;
-  border-radius: 0.5rem;
-  padding: 0.2rem;
-  font-size: 18px;
+.login-with {
+  display: inline-flex;
+  gap: 20px;
+  margin: auto;
+  margin-top: 1em;
 }
+
+.button-log {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  background: #59b85c;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.274);
+  color: white !important;
+  fill: white;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  fill: var(--main-color);
+}
+
+.long-btn {
+  --width: 150px;
+  --timing: 2s;
+  border: 0;
+  width: var(--width);
+  padding-block: 0.2em;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1em;
+  background: #59b85c;
+  transition: all 0.2s;
+  border-radius: 3px;
+}
+
+.long-btn:hover {
+  background-image: linear-gradient(to right, rgb(250, 82, 82), rgb(250, 82, 82) 16.65%, rgb(190, 75, 219) 16.65%, rgb(190, 75, 219) 33.3%, rgb(76, 110, 245) 33.3%, rgb(76, 110, 245) 49.95%, rgb(64, 192, 87) 49.95%, rgb(64, 192, 87) 66.6%, rgb(250, 176, 5) 66.6%, rgb(250, 176, 5) 83.25%, rgb(253, 126, 20) 83.25%, rgb(253, 126, 20) 100%, rgb(250, 82, 82) 100%);
+  animation: var(--timing) linear dance6123 infinite;
+  transform: scale(1.1) translateY(-1px);
+}
+
+@keyframes dance6123 {
+  to {
+    background-position: var(--width);
+  }
+}
+
 
 .signup-btn {
   background: transparent;
@@ -722,16 +796,28 @@ a:hover {
   margin-top: 2rem;
 }
 
+.su-btn {
+  text-decoration: underline;
+}
+
 /* NOT AUTH */
+
+@media screen and (max-width:768px) {
+  .not-logged {
+    padding-top: 25% !important;
+  }
+}
 
 .not-logged {
   font-size: 24px;
-  margin-top: 10%;
+  padding-top: 10%;
+  font-family: 'PT Sans', sans-serif;
 }
 
 .or {
-  font-size: 18px;
-  padding-top: 10px;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 14px;
+  padding-top: 5px;
 }
 
 /* POST LIST */
@@ -742,9 +828,13 @@ a:hover {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
     justify-items: inherit !important;
+    margin-top: 5% !important;
   }
   .post-list h3 {
     font-size: 18px !important;
+  }
+  .center {
+    margin-left: 0.7em !important;
   }
 }
 
@@ -764,6 +854,7 @@ a:hover {
 
 .post-info {
   border-radius: 1rem;
+  width: 10em;
 }
 
 .post-list h3 {
@@ -1104,5 +1195,7 @@ a:hover {
 }
 
 .filter-type button.active {
-  font-weight: bold;
+  background: #59b85c;
+  color: white;
+  transition: 0.4s;
 }
