--- a/plot-weave/client/src/Main.css
+++ b/plot-weave/client/src/Main.css
@@ -137,6 +137,10 @@ html, body {
   z-index: 1;
 }
 
+.nav-link:hover {
+  color: green !important;
+}
+
 .navbar-nav {
   background-color: white !important;
 }
@@ -286,6 +290,88 @@ footer {
   }
 }
 
+@media screen and (max-width:768px) {
+  .modal-content p {
+    font-size: 12px !important;
+    margin-bottom: 10px !important;
+  }
+  .modal-content h2 {
+    font-size: 22px !important;
+    margin-bottom: 5px !important;
+  }
+  .modal-content button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    margin-top: 1em;
+    background-color: #4caf50;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+  }
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(8px); /* Adjust the blur intensity as needed */
+  background-color: rgba(0, 0, 0, 0.5); /* Adjust the background color and opacity as needed */
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: left;
+  width: 70%;
+  height: 60%;
+  font-family: 'PT Sans', sans-serif;
+}
+
+.modal-content h2 {
+  font-size: 26px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+  font-family: 'PT Sans', sans-serif;
+}
+
+.modal-content p {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.modal-content button {
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.modal-content button:hover {
+  background-color: #439b46;
+  transition: 0.3s all;
+}
+
 .hero {
     padding-top: 12.5%;
     display: flex;
@@ -346,6 +432,12 @@ footer {
   width: 15em;
   position: absolute;
   top: 10.5em;
+  opacity: 0; /* Initially hide the image */
+  transition: opacity 0.8s ease-in-out; /* Add a smooth transition effect */
+}
+
+.phone-demo.loaded {
+  opacity: 1; /* Show the image when it's loaded */
 }
 
 .demo {
@@ -568,7 +660,7 @@ footer {
     margin: auto;
     margin-top: 2em;
     margin-bottom: 1.5em;
-    border: 3px dashed #4caf50;
+    border: 3px solid #4caf50;
     border-radius: 0.8em;
     font-size: 16px;
     cursor: pointer;
@@ -590,7 +682,7 @@ footer {
     left: -100%;
     z-index: -1;
     transition: width 0.6s ease-in;
-    transition-delay: 0.5s;
+    transition-delay: 0.1s;
   }
   
   .weaveBtn::after {
@@ -603,11 +695,11 @@ footer {
   }
   
   .weaveBtn:hover {
-    animation: fill-border 1s ease-in-out forwards;
+    /* animation: fill-border 1s ease-in-out forwards; */
     color: #fff;
-    border: 3px dashed #4caf50;
-    transition: border 1s ease-in-out;
-    transition: color 1s ease-in-out;
+    border: 3px solid #4caf50;
+    /* transition: border 1s ease-in-out; */
+    transition: color 0.3s ease-in-out;
   }
   
   @keyframes fill-border {
@@ -1010,7 +1102,6 @@ footer {
 
 .center {
   margin: auto;
-  display: inline-grid;
   width: 80%;
 }
 
@@ -1169,6 +1260,7 @@ footer {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin-top: 1em;
 }
 
 .modal .close-modal {
